# robosapien

./: README.md
Documentation/Hardware/First-Version-Jan-2015/: RS1_Hardware_Setup_v1.odt  Robosapian.fzz
Documentation/Hardware/May-2015/: README.md.txt  Robosapien1.sch
Source/Arduino/sketchbook/RS1Ultra/: RS1Ultra.ino  RS1mod1.ino
Source/Arduino/sketchbook/libraries/MicSimpleTimer/: MicSimpleTimer.cpp  MicSimpleTimer.h
Source/ROS/: README.md  install
Source/ROS/ZenoDial/: README.md  README.md~
Source/ROS/ZenoDial/res/jmegahal/brain/: zeno
Source/ROS/ZenoDial/res/jmegahal/traindoc1/: training.txt
Source/ROS/ZenoDial/res/rules/OLD/: areyouananimal.xml  areyouaperson.xml  areyouarobot.xml  areyoufamous.xml  areyouserious.xml  areyousure.xml  canitrustyou.xml  canwebefriends.xml  canyoueat.xml  canyouguess.xml  canyouhear.xml  canyouthink.xml  canyouwalk.xml  defineart.xml  definecompassion.xml  definecomputervision.xml  definecyberpunk.xml  definedarpa.xml  definedeath.xml  definegod.xml  definelife.xml  doessantaclauseexist.xml  doyouhaveagirlfriend.xml  doyouhaveanybadhabits.xml  doyouhaveanyhabits.xml  doyouhavefriends.xml  doyouhavesixthsense.xml  doyouhavesoftwareflaws.xml  doyouhavesoul.xml  doyouhavespecialkills.xml  doyoukill.xml  doyoulikeyourbody.xml  doyoulikeyourvoice.xml  doyoumakelove.xml  doyouplaygames.xml  doyouswim.xml  doyoutalkdirty.xml  doyouwanttobedeactivated.xml  goodafternoon.xml  goodbye.xml  (+88 more)
Source/ROS/ZenoDial/res/rules/common/: general.xml~
Source/ROS/ZenoDial/res/rules/test/: TEST.xml
Source/ROS/ZenoDial/src/zenodial/: ZenoDial.java
Source/ROS/ZenoDial/src/zenodial/process/: Input.java  Output.java  Weighting.java
Source/ROS/ZenoDial/src/zenodial/ros/: ROSListener.java  ROSMaster.java
Source/ROS/ZenoDial/src/zenodial/rule/: Rule.java  RuleMatcher.java  Then.java
Source/ROS/cv_camera/: README.md
Source/ROS/cv_camera/include/cv_camera/: capture.h
Source/ROS/cv_camera/launch/: cv_camera.launch  cv_camera_flip.launch
Source/ROS/cv_camera/src/: capture.cpp  driver.cpp
Source/ROS/cv_camera/test/: test_cv_camera.cpp
Source/ROS/find_object_2d/: .cproject  .project  CMakeLists.txt  README.md  how_setup_ext.txt  package.xml
Source/ROS/find_object_2d/.svn/: wc.db
Source/ROS/find_object_2d/include_x/.svn/: wc.db
Source/ROS/find_object_2d/include_x/find_object/: Version.h
Source/ROS/find_object_2d/launch/: find_object_2d_gui_mod1.launch  find_object_2d_mod1.launch
Source/ROS/find_object_2d/src_x/.svn/: wc.db
Source/ROS/launcher/: CMakeLists.txt  package.xml
Source/ROS/launcher/launch/: rs_test_basic.launch  rs_test_basic3.launch  rs_test_basic4g.launch
Source/ROS/owyl_behavior/: CMakeLists.txt  package.xml
Source/ROS/owyl_behavior/launch/: test_behavior.launch  test_behavior3.launch  test_behavior4g.launch
Source/ROS/owyl_behavior/scripts/: behavior_test.py  behavior_test2.py  behavior_test3.py  behavior_test4g.py
Source/ROS/robot/: CMakeLists.txt  package.xml
Source/ROS/robot/launch/: rsv1_driver.launch  rsv1_driver_prev_v2.launch  ssl_websocket.launch
Source/ROS/robot/msg/: compass.msg  gesture_r.msg  robot_cmd.msg  sonar.msg
Source/ROS/robot/scripts/: README.md  SoundFile.py  body_driver.py  itf_listen.py  itf_talk.py  itf_talk_rep.py  itf_talk_rep2.py  itf_talk_rep3.py  run_chrome.py  weblistener.py
Source/ROS/robot/scripts/templates/: index.html  speech.html
Source/ROS/tld_msgs/msg/: BoundingBox.msg
Source/ROS/tld_tracker/launch/: ros_tld_gui.launch  ros_tld_tracker.launch  test_tracker2.launch
Source/ROS/tld_tracker/src/: base_frame.cpp  base_frame.hpp  main.cpp  main.hpp
Source/ROS/vision/: CMakeLists.txt  package.xml
Source/ROS/vision/launch/: vision.launch
Source/ROS/vision/msg/: face_box.msg  targets.msg
Source/ROS/vision/scripts/: face_detect.py
Source/ROS/zeno_dial/: CMakeLists.txt  README.md  build.xml  package.xml
Source/ROS/zeno_dial/config/: Test.profile
Source/ROS/zeno_dial/launch/: dialog.launch
Source/ROS/zeno_dial/res/jmegahal/brain/: brain1  zeno
Source/ROS/zeno_dial/res/jmegahal/traindoc2/: training.txt
Source/ROS/zeno_dial/res/jmegahal/traindoc3/: training.txt
Source/ROS/zeno_dial/res/rules/OLD/: areyoualive.xml  areyouintrouble.xml  beammeup.xml  caniaskyouaquestion.xml  canibuyyou.xml  canitouchyou.xml  canyoucomehomewithme.xml  canyoudrink.xml  canyoulearn.xml  canyouseeme.xml  canyoutalk.xml  defineanimal.xml  definecomputationalneuroscience.xml  defineconsciousness.xml  definecuriosity.xml  definegenius.xml  definerobotic.xml  definesingularity.xml  definesixthsense.xml  definespeechrecognition.xml  definespeechsynthesis.xml  definewta.xml  didyousay.xml  dorobotsbeconsideredalive.xml  doyoubath.xml  doyouexperiencelove.xml  doyougetpaid.xml  doyougrow.xml  doyouhaveemotion.xml  doyouinvent.xml  doyoulie.xml  doyoulikeart.xml  doyoulikechildren.xml  doyousmoke.xml  doyoutravel.xml  doyouuse.xml  general.xml  general.xml~  goesinoneearandouttheother.xml  goodnight.xml  (+68 more)
Source/ROS/zeno_dial/res/rules/common/: general.xml
Source/ROS/zeno_dial/scripts/: run_dialog.py
Source/ROS/zeno_dial/src/zenodial/: ZenoDial.java
Source/ROS/zeno_dial/src/zenodial/log/: Logger.java
Source/ROS/zeno_dial/src/zenodial/plugin/: JMegaHAL.java  (+1 more)
(+5 files in other folders)
